Fixed the spilled alignment of top menu links and logo that became smaller when screen rezied to small.

--- a/style.css
+++ b/style.css
@@ -106,5 +106,6 @@ html {
   border: 1px solid black;
 }
 
-
-
+input.form-control.text-pink {
+  color: pink;
+}
